[package]
name = "ligrust"
version = "0.1.0"
description = "Ligra in rust"
authors = [
    "Martin Junghanns <nerdfaktor42@mailbox.org>",
    "Paul Horn <opensource@developer.knutwalker.engineer>"
]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
# color-eyre = { version = "0.5.10", default-features = false }
console = { version = "0.14.0", default-features = false }
eyre = "0.6.5"

[dev-dependencies]
test-case = "1.1.0"

# [profile.dev.package.backtrace]
# opt-level = 3

[features]
weighted = []
