[package]
name = "ligrust"
version = "0.1.0"
description = "Ligra in rust"
authors = [
    "Martin Junghanns <nerdfaktor42@mailbox.org>",
    "Paul Horn <opensource@developer.knutwalker.engineer>"
]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "0.1.4"
atoi = "0.4.0"
byte-slice-cast = "1.0.0"
console = { version = "0.14.0", default-features = false }
downcast-rs = "1.2.0"
eyre = "0.6.5"
linereader = "0.4.0"
rayon = "1.5.0"
rustc-hash = "1.1.0"

[dev-dependencies]
test-case = "1.1.0"

[features]
weighted = []
