[package]
name = "ligrust"
version = "0.1.0"
description = "Ligra in rust"
authors = [
    "Martin Junghanns <nerdfaktor42@mailbox.org>",
    "Paul Horn <opensource@developer.knutwalker.engineer>"
]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "1.0.0"
atomic_float = "0.1.0"
byte-slice-cast = "1.0.0"
eyre = "0.6.5"
linereader = "0.4.0"
memmap = { version = "0.7.0", optional = true }
pico-args = "0.4.1"
rayon = "1.5.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
# test-case = "1.1.0"

[features]
default = ["mapped_graph"]
weighted = []
sparse_atomic_pack = []
mapped_graph = ["memmap"]
